--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-layout": "^6.2.5",
     "@ant-design/pro-table": "^2.4.0",
+    "address-smart-parse": "^1.0.0",
     "antd": "^4.4.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
@@ -58,6 +59,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet-async": "^1.0.4",
+    "react-syntax-highlighter": "^13.2.1",
+    "react-text-loop": "^2.3.0",
     "umi": "^3.2.0",
     "umi-request": "^1.0.8",
     "use-merge-value": "^1.0.1"
